Dashboard/public/css/styles.css
/* ===============================
   Authors: 
   Date:
   
   Colour Palette:
   ---------------

   
   =============================== */

/************************************************************************
 *								GENERAL									*
 ************************************************************************/
body {

/* 	background: #ffffff url('../images/paper-bg.jpg') top center repeat; */
	background: #ffffff;
	color: #4b2707;
	font-size: 14px;
	font-family: 'Avenir Next LT Pro Regular', 'Open Sans', 'Helvetica Nueue' Helvetica, Arial, sans-serif;
	-webkit-font-smoothing: antialiased;
	text-rendering: optimizelegibility;
	width: 100%;
}

.container {
	width: 924px;
	margin: 0 auto;
	padding: 3px 24px;
}

.header-container {
	width: 924px;
	margin: 0 auto;
	padding: 3px 24px;
}

/************************************************************************
 *							     TYPOGRAPHY								*
 ************************************************************************/


h1 {
	color: #000000;
	font-size: 35px;
	font-weight: normal;
	font-family: 'Avenir Next LT Pro Italic';
	line-height: 44px;
	text-align: center;
	margin-top: 15px;
	margin-bottom: 10px;
}

h2 {
	color: #353535;
	font-size: 40px;
	font-weight: 300;
	font-family: 'Myriad Pro Light';
	line-height: 20px;
}

h3 {
	color: 353535;
	font-size: 25px;
	font-family: 'Myriad Pro Light';
	font-weight: 300;
	margin: 0px 0px 0px 0px;
}

h4 {
	font-size: 12px;
	font-weight: 600;
	text-align: left;
	margin-bottom: 5px;
	text-transform: uppercase;
	
}

h4 em {
	font-family: 'Avenir Next LT Pro Regular';
	color: #61B535;
}

.welcome {
	font-size: 28px;
	font-family: 'Open Sans', 'Helvetica Nueue' Helvetica, Arial, sans-serif;
	font-weight: 300;
	text-align: center;
	margin-top: -10px;
	margin-bottom: 30px;
	color: #000000;
	text-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
	
}

.lead {
	font-size: 30px;
	font-weight: 400;
/* 	text-align: center; */
	margin: 10px 0;
	text-transform: capitalize;
}

.center-text {
	text-align: center;
	line-height: 25px;
	font-size: 16px;
}

.center {
	text-align: center;
}

.inText {
	text-align: center;
/* 	margin-top: -10px; */
}
a.inText:link {
	color: #d48642;
	text-decoration: none;
}

a.inText:visited {
	color: #d48642;
}

a.inText:hover {
	color: #8D473D;
	text-decoration: underline;
}

hr.divider {
	border: none;
	height: 30px;
	width: 333px;
	margin: 30px auto;
	background: url('../images/divider.png') center center no-repeat;
}

#kya-story-text {
	float: right;
/* 	text-align: center; */
 	width: 250px;
 	vertical-align: middle;
 	padding-top: 15%;
}

#kya-story-text h1  {
	font-family: 'Avenir Next LT Pro Ultra Light Condensed';
	font-size: 30px;
}

#kya-story-text em {
	font-size: 35px;
}

.kya-text {
	font-family: 'Avenir Next LT Pro Ultra Light Condensed';
	font-size: 20px;
	font-weight: 500;
	letter-spacing: .1em;
	color: #353535;

}


/************************************************************************
 *								HEADER									*
 ************************************************************************/
.animated {
-webkit-animation-name: mymove;  /* Chrome, Safari, Opera */
    -webkit-animation-duration: 5s;  /* Chrome, Safari, Opera */
    animation-name: mymove;
    animation-duration: 5s;
}
@-webkit-keyframes mymove {
    from {top: 0px;}
    to {top: 200px;}
}

@keyframes mymove {
    from {top: 0px;}
    to {top: 200px;}
}

header.main.header {
	background: rgba(75,    157,    186, 0.99);
	color: #f2f3ee;
	padding: 0;
	box-shadow: 0 1px 3px rgba(0,0,0,.5);
	width: 100%;
	position: fixed;
	z-index: 99;
}

.header-fixed {
	margin-top: 90px;
}

li img {
	width: auto;
	height: 100px;
	margin: -5px 20px 10px 0;
}

a.link-logo {
	padding: 0;
	margin-left: -20px;
	margin-top: 5px;
	margin-bottom: 0;
	position: absolute
}
nav {
	margin-top: -3px;
	margin-bottom: -7px;
	width: 924px;
/* 	height: 20px; */
}

nav ul ul {
	padding: 0;
	display: none;
}

nav ul li:hover > ul {
	display: block;
}
	
nav ul {
/* 	background: url('../images/subtle-dots.png') top left repeat; */
	margin: 0px;
	padding: 0 20px;
	list-style: none;
	position: relative;
	display: inline-table;
}

nav ul:after {
	content: ""; 
	clear: both; 
	display: block;
}
	
nav ul li{
	float: left;
	
}

nav ul li.header-title {
	border-top: solid 5px transparent;
/* 	float: right; */
/* 	margin-left: 200px; */
}

nav ul li.header-first {
	margin-left: 520px;
}

nav ul li:hover {
/* 	background-color: rgba(248,  180,  62, 0.31); */
	border-color: #1A3971;

}

nav ul li:hover a {
	color: #1A3971;
}
	
nav li span {
	padding-left: 10px;
}

nav ul li a {
	display: block; 
	padding: 25px 20px;
	color: #FFF; 
	text-decoration: none;
	font-size: 12px;
	text-transform: uppercase;
	text-rendering: optimizeLegibility;
	
}

#header-last {
	padding-right: 0px;
}
nav ul li.header-tile a {
	
	margin-top: -5px;
}

nav ul ul {
	background: #8D473D; 
	border-radius: 0px; 
	padding: 0;
	position: absolute; 
	top: 100%;
}

nav ul ul li {
	background-color: rgba(248,  180,  62, 0.31);
	float: none; 
	border-bottom: 1px solid #8D473D;
	position: relative;
	
}

nav ul ul li:first-child {
	border-top: 1px solid #8D473D;

}

nav ul ul li a {
	padding: 15px 40px;
	color: #fff;
}	
	
nav ul ul li a:hover {
	background: rgba(236, 142, 60, 0.85);
	color: #FFF;
}
			
nav ul ul ul {
	position: absolute;
	left: 100%;
	top:0;
}

li.header-title.active {
	border-color: #1A3971;
}

li.header-title.active a{
	color: #1A3971;
}

/************************************************************************
 *							   SUBHEADER								*
 ************************************************************************/
ul.sub-header li{
	list-style: none;
	display: inline;
	margin-left: 40px;
}

header span.sub-header-title {
	float: left;
	font-size: 35px;
	font-weight: 300;
	letter-spacing: 1px;
	margin-top: 10px;
	color: #8D473D;
}

ul.sub-header {
	float: right;
	padding-top: 20px;
	margin-bottom: 10px;
}

header hr {
	width: 924px;
	border: none;
	height: 0.05em;
	background: #333;	
}
/* ... */

